# goit-softwere-hw-10

./: README.md  pyproject.toml
quote_site/: manage.py
quote_site/quote_site/: asgi.py  settings.py  urls.py  wsgi.py
quote_site/quotes/: forms.py  models.py  tests.py  urls.py  utils.py  views.py
quote_site/quotes/management/commands/: dedupe_quotes.py  import_quotes.py
quote_site/quotes/migrations/: 0001_initial.py
quote_site/quotes/services/: scraper.py
quote_site/quotes/static/quotes/: styles.css
quote_site/quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  base.html  index.html  tag_quotes.html
quote_site/users/: urls.py  views.py
quote_site/users/templates/users/: login.html  logout.html  signup.html
