[tool.poetry]
name = "module-s10-homework"
version = "0.1.0"
description = ""
authors = ["Art-eri-ya <gerasartem4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
django = "^6.0.7"
psycopg2-binary = "^2.9.12"
python-dotenv = "^1.2.2"
pymongo = "^4.17.0"
requests = "^2.34.2"
beautifulsoup4 = "^4.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
